[gd_scene load_steps=3 format=3 uid="uid://cvisgcaqhic4j"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_ogo5q"]
[ext_resource type="Texture2D" uid="uid://cbdwowt87g315" path="res://assets/title.png" id="1_tc2we"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ogo5q")
levelTest = "Level"
level1 = "Level_1"
level2 = "test_level_2"

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.925222, 0.910403, 0.786164, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -15.5
offset_right = 19.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level 1 - RayCast Test"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CSG Level Test"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "hurrur game"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(241, 77)
scale = Vector2(0.03579, 0.03579)
texture = ExtResource("1_tc2we")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_levelTest_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_level1_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_level2_pressed"]
